@@ -1,3 +1,12 @@
+2007-03-19  dima  <dima.exe@gmail.com>
+
+	* rails-core.el (rails-core:layout-file): support template types on go to layout menu
+
+	* rails-for-controller.el (rails-controller:create-view-for-action): create function
+	(rails-controller:switch-to-view): allow select template type on create
+
+	* rails.el: add support haml template engine
+
 2007-03-15  dima  <dima.exe@gmail.com>
 
 	* rails-scripts.el (rails-rake-tests): using `compile`
@@ -16,7 +25,7 @@
 
 2007-02-02  dima  <dima.exe@gmail.com>
 
-	* rails-snippets.el (rails-snippets-menu-list): bug #8381 (bag "ff" snippet)
+	* rails-snippets.el (rails-snippets-menu-list): bug #8381 (bad "ff" snippet)
 
 2007-01-30  dima  <dima.exe@gmail.com>
 
